[metadata]
name = argparse_custom_types
version = 0.2.0
description = argparse custom types
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tech-chad/argparse-custom-types
author = Chad Larson
author_email = techchad2@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
py_modules = argparse_custom_types
python_requires = >= 3.6.1

[options.packages.find]
exclude =
    tests*
    tests
